--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<main class="main">
+		<div class="logo"><img src="img.png" ></div>
 	<div class="nike">
 		<div class="nike__img"><img src="nike.png"></div>
 		<div class="nike__color">
